[gd_scene load_steps=4 format=3 uid="uid://bvwiu6nssy7b5"]

[ext_resource type="Script" uid="uid://dc7fpxydrttet" path="res://Scripts/MainMenu.gd" id="1_tt5f1"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_idj7w"]
frequency = 0.5
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_bnhvo"]
noise = SubResource("FastNoiseLite_idj7w")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_tt5f1")

[node name="Background2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05490196, 0.16470589, 0.11764706, 1)

[node name="TextureRect" type="TextureRect" parent="Background2"]
modulate = Color(0.009145312, 0.2442224, 0.19641438, 1)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("NoiseTexture2D_bnhvo")

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MenuPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MenuPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MenuPanel/MarginContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 47
text = "SEQUENCE"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
mouse_filter = 2

[node name="Label2" type="Label" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Selecciona jugadores"
horizontal_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Btn2Players" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 23
text = "2 "

[node name="Btn3Players" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 23
text = "3"

[node name="Control" type="Control" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 2

[node name="BtnExit" type="Button" parent="CenterContainer/MenuPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 27
text = "SALIR"
